--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
     background-color: rgb(5, 5, 5);
     color: rgb(245, 245, 245);
-    overflow: scroll;
+    overflow:hidden;
 }
 
 
@@ -224,12 +224,17 @@ body {
     padding: 10px 14px;
 }
 
+
 .playbar {
-    position: absolute;
-    bottom: 0;
-    background-color: rgb(255, 255, 255);
+    position: fixed;
+    bottom: 10px;
+    filter: invert(1);
+    background-color: #dad5d5;
+    border-radius: 30px;
     width: 100%;
     padding: 12px;
+    width: 70vw;
+    height: 25px;
 }
 
 .songbutton {
@@ -244,7 +249,7 @@ body {
 }
 
 .songlist ul {
-    padding: 4px 15px;
+    padding: 4px 12px;
     margin: -10px;
 }
 
@@ -252,18 +257,56 @@ body {
 .songlist ul li {
     list-style-type: none;
     display: flex;
-    gap: 10px;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    gap: 12px;
     cursor: pointer;
     padding: 12px 0;
     border: 1px solid white;
     margin: 9px 0;
     padding: 10px;
     border-radius: 5px;
+    font-size: 13px;
 
 }
 
 .playnow {
     padding: 9px 0px 0px 40px;
 }
+
+
+.songlist .info {
+    width: 95px;
+}
+
+.songlist {
+    height: 344px;
+    overflow: scroll;
+    overflow-x: hidden;
+    margin-bottom: 20px;
+}
+
+
+.seekbar {
+    height: 0px;
+    width: 96%;
+    border-radius: 10px;
+    border: 2px solid black;
+    position: absolute;
+    bottom: 0;
+    margin: 6px;
+}
+
+.circle {
+    width: 13px;
+    height: 13px;
+    border-radius: 13px;
+    background: black;
+    position: absolute;
+    bottom: -6px;
+    left: 0%;
+    transition: left 0.5s;
+}
+
 
 
